--- a/src/_includes/layout.liquid
+++ b/src/_includes/layout.liquid
@@ -10,7 +10,7 @@
 
   <script src="/js/main.bundle.js" defer></script>
 
-
+  <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
 
   <title>{{ title }}</title>
@@ -65,6 +65,18 @@
 <!-- Javascript -->
 {% render './JS/darkModeJS.liquid' %}
 
+
+<script>
+    if (window.netlifyIdentity) {
+      window.netlifyIdentity.on("init", user => {
+        if (!user) {
+          window.netlifyIdentity.on("login", () => {
+            document.location.href = "/admin/";
+          });
+        }
+      });
+    }
+  </script>
 
 
    
