--- a/src/tailwind/index.css
+++ b/src/tailwind/index.css
@@ -1,5 +1,5 @@
 /* google fonts */
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto+Mono&family=Lobster+Two&family=Kaushan+Script&family=Yatra+One&family=Train+One&family=Indie+Flower&family=Atma&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;500;600;700&family=Roboto+Mono:wght@300;400;500;600;700&family=Lobster+Two&family=Kaushan+Script&family=Yatra+One&family=Train+One&family=Indie+Flower&family=Atma&display=swap');
 
 
 
@@ -14,6 +14,8 @@
 
 @import './websiteSpecifc/_websiteSpecific.css';
 
+
+@import './4_old/_old.css';
 
 
 
