--- a/src/tailwind/websiteSpecifc/_websiteSpecific.css
+++ b/src/tailwind/websiteSpecifc/_websiteSpecific.css
@@ -4,4 +4,7 @@
 
 /* prismJS for highlighting code syntax of the markdown file */
 
-@import './prismJS/prismDark.css'
+@import './prismJS/prismDark.css';
+
+
+@import './swiperJS.css'
