--- a/src/_includes/header.liquid
+++ b/src/_includes/header.liquid
@@ -5,6 +5,7 @@
 <nav class="flex flex-wrap justify-start gap-4">
 
     <a class="p-2 rounded-lg" href="/">Home</a>
+    <a class="p-2 rounded-lg" href="/slideshow/images/">Images</a>
     <a class="p-2 rounded-lg" href="/blog/">Blog</a>
     <a class="p-2 rounded-lg" href="/about/">About</a>
     <a class="p-2 rounded-lg" href="/counter/">Counter</a>
