--- a/src/_includes/layout.liquid
+++ b/src/_includes/layout.liquid
@@ -10,7 +10,45 @@
 
   <script src="/js/main.bundle.js" defer></script>
 
+
+  <!-- netlify cms -->
   <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
+
+  <!-- Swiper -->
+
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+
+
+
+
+  <style>
+      
+  
+
+    .swiper {
+      width: 100%;
+      padding-top: 50px;
+      padding-bottom: 150px;
+    
+    }
+
+    .swiper-slide {
+    
+      width: 250px;
+      height: 300px;
+      -webkit-box-reflect: below 1px linear-gradient(transparent, transparent,#0006);
+     
+    }
+
+    .swiper-slide img {
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+    }
+
+
+  </style>
 
 
   <title>{{ title }}</title>
@@ -21,7 +59,7 @@
 
 
 
-<body  class="relative bg-s-t1a1 text-l1-a1  -p">
+<body  class="relative bg-s-t1a1 text-l1-a1 font-mono -p">
 
 
 <!-- Dark Mode Toggle -->
