--- a/src/tailwind/4_old/card/layout.css
+++ b/src/tailwind/4_old/card/layout.css
@@ -1,7 +1,8 @@
 @layer utilities {
 
+/* 1 card on mobile and 3 cards on s-lg in a row */
 
-.-card-layout-1-3{
+.-card-1-3-parent{
     @apply
     grid 
     grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5
@@ -10,7 +11,7 @@
     
 }
 
-.-card-layout-1-3-wrapper{
+.-card-1-3-grand-parent{
     @apply
     flex
     justify-center;
