--- a/src/blog.liquid
+++ b/src/blog.liquid
@@ -29,7 +29,7 @@ layout: 'layout.liquid'
                        
                 </h5>
 
-               <p>    {{ post.data.description | truncate: 50}}
+               <p>    {{ post.data.article | truncate: 50}}
             </p>
             
 
